# unigreen-test-task

./: .env.example  .gitignore  README.md  logger_config.py  pyproject.toml  requirements.txt  script.py  settings.py
