[project]
name = "unigreen-energy"
version = "0.1.0"
description = ""
authors = [
    {name = "KirGorbunov",email = "KirGorbunov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "xlwt (>=1.3.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "ANN", "Q", "S"]
ignore = ["S501"]

[tool.ruff.lint.isort]
order-by-type = true
force-sort-within-sections = true
combine-as-imports = true
case-sensitive = false
lines-after-imports = 2
force-single-line = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"

